--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,9 +42,15 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install and build
-        run: npm install -g hexo-cli && npm install && hexo g 
-          
+      - name: Install
+        run: |
+         npm install css
+         npm install -g hexo-cli
+         npm install 
+        
+      - name: Build
+        run: hexo g
+        
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
