--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -87,7 +87,7 @@ fun_features:
 
     # 打印速度，数字越大越慢
     # Typing speed, the larger the number, the slower
-    typeSpeed: 60
+    typeSpeed: 40
 
     # 游标字符
     # Cursor character
@@ -465,7 +465,7 @@ index:
   # 头图高度，屏幕百分比
   # Height ratio of banner image
   # Available: 0 - 100
-  banner_img_height: 100
+  banner_img_height: 60
 
   # 头图黑色蒙版的不透明度，available: 0 - 1.0， 1 是完全不透明
   # Opacity of the banner mask, 1.0 is completely opaque
@@ -954,7 +954,7 @@ about:
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/pzm9012", tip: "GitHub" }
     - { class: "iconfont icon-mail", link: "mailto:pzm9012@outlook.com", tip: "邮件" }
-    - {  }
+    - { class: "iconfont telegram-mail", link: "https://t.me/pzm9012", tip: "Telegram" }
 
 
 #---------------------------
