blog: write new post

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -954,7 +954,8 @@ about:
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/pzm9012", tip: "GitHub" }
     - { class: "iconfont icon-mail", link: "mailto:pzm9012@outlook.com", tip: "邮件" }
-    - { class: "iconfont telegram-mail", link: "https://t.me/pzm9012", tip: "Telegram" }
+    - { class: "iconfont icon-telegram-fill", link: "https://t.me/pzm9012", tip: "Telegram" }
+    - { class: "iconfont icon-twitter-fill", link: "https://twitter.com/pzm9012", tip: "X" }
 
 
 #---------------------------
