--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -44,12 +44,10 @@ jobs:
 
       - name: Install
         run: |
-         npm install css
-         npm install -g hexo-cli
-         npm install 
+         npm install
         
       - name: Build
-        run: hexo g
+        run: npx hexo g
         
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
