--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -326,7 +326,7 @@ iconfont: //at.alicdn.com/t/font_1736178_lbnruvf0jn.css
 navbar:
   # 导航栏左侧的标题，为空则按 hexo config 中 `title` 显示
   # The title on the left side of the navigation bar. If empty, it is based on `title` in hexo config
-  blog_title: "pzm9012"
+  blog_title: "pzm9012 的小站"
 
   # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
   # Navigation bar frosted glass special animation. It is an experimental feature
@@ -351,6 +351,7 @@ navbar:
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
     - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
+    - { key: "文稿站", link: "/doc-vite/", icon: "iconfont icon-book" }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
@@ -460,7 +461,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/cover9.jpg
+  banner_img: /img/cover9.png
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -532,7 +533,7 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/cover9.jpg
+  banner_img: /img/cover9.png
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
@@ -886,7 +887,7 @@ giscus:
 # Archive Page
 #---------------------------
 archive:
-  banner_img: /img/cover8.jpg
+  banner_img: /img/cover9.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -897,7 +898,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img/cover8.jpg
+  banner_img: /img/cover9.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -926,7 +927,7 @@ category:
 #---------------------------
 tag:
   enable: true
-  banner_img: /img/cover8.jpg
+  banner_img: /img/cover9.png
   banner_img_height: 70
   banner_mask_alpha: 0.3
   tagcloud:
@@ -943,10 +944,10 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/cover8.jpg
+  banner_img: /img/cover9.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
-  avatar: /img/IMG_6184.JPG
+  avatar: /img/avatar.jpg
   name: "pzm9012"
   intro: ""
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
@@ -966,7 +967,7 @@ about:
 # Custom Page through `hexo new page`
 #---------------------------
 page:
-  banner_img: /img/cover8.jpg
+  banner_img: /img/cover9.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
 
@@ -991,7 +992,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/cover8.jpg
+  banner_img: /img/cover9.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
   # 友链的成员项
