--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
-  "private": true,
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
@@ -9,11 +6,14 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "6.3.0"
+    "version": "7.0.0"
+  },
+  "devDependencies": {
+    "hexo-cli": "^4.3.1",
+    "hexo-theme-fluid": "^1.9.7"
   },
   "dependencies": {
     "hexo": "^7.0.0",
-    "hexo-cli": "^4.3.1",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
@@ -24,7 +24,6 @@
     "hexo-renderer-marked": "^6.2.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": ">0.0.0",
-    "hexo-theme-fluid": "^1.9.4",
     "hexo-theme-landscape": "^1.0.0"
   }
 }
