chore: change pictures

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -466,7 +466,7 @@ index:
   # 头图高度，屏幕百分比
   # Height ratio of banner image
   # Available: 0 - 100
-  banner_img_height: 70
+  banner_img_height: 100
 
   # 头图黑色蒙版的不透明度，available: 0 - 1.0， 1 是完全不透明
   # Opacity of the banner mask, 1.0 is completely opaque
@@ -947,8 +947,8 @@ about:
   banner_img: /img/cover9.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
-  avatar: /img/avatar.jpg
-  name: "pzm9012"
+  avatar: /img/avatar1.png
+  name: "pzm9012 | 洺渊"
   intro: ""
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
