--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -100,7 +100,7 @@ fun_features:
     # 在指定页面开启，不填则在所有页面开启
     # Enable in specified page, all pages by default
     # Options: home | post | tag | category | about | links | page | 404
-    scope: []
+    scope: ['home']
 
   # 为文章内容中的标题添加锚图标
   # Add an anchor icon to the title on the post page
@@ -425,6 +425,7 @@ footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
   content: '
+    <br>2022-2024 By 洺渊<br/>
     <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>Hexo</span></a>
     <i class="iconfont icon-love"></i>
     <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener"><span>Fluid</span></a>
@@ -480,7 +481,7 @@ index:
 
     # 为空则按 hexo config.subtitle 显示
     # If empty, text based on `subtitle` in hexo config
-    text: "披星戴月走过的路，终会，繁花遍地。"
+    text: "我不害怕明天，因为我经历过昨天，又热爱今天。"
 
     # 通过 API 接口作为首页副标题的内容，必须返回的是 JSON 格式，如果请求失败则按 text 字段显示，该功能必须先开启 typing 打字机功能
     # Subtitle of the homepage through the API, must be returned a JSON. If the request fails, it will be displayed in `text` value. This feature must first enable the typing animation
@@ -650,7 +651,7 @@ post:
 
     # CreativeCommons license
     # Options: BY | BY-SA | BY-ND | BY-NC | BY-NC-SA | BY-NC-ND
-    license: 'BY-NC'
+    license: 'BY-NC-SA'
 
     # 显示作者
     author:
@@ -725,11 +726,11 @@ post:
   # 评论插件
   # Comment plugin
   comments:
-    enable: false
+    enable: true
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis | giscus
-    type: disqus
+    type: gitalk
 
 
 #---------------------------
@@ -768,11 +769,11 @@ disqus:
 # Based on GitHub Issues
 # See: https://github.com/gitalk/gitalk#options
 gitalk:
-  clientID:
-  clientSecret:
-  repo:
-  owner:
-  admin: ['name']
+  clientID: Ov23ct9N1KV5nldJeBn7
+  clientSecret: ff0573114e6851c5544e0827aa74b3ac313e2ae1
+  repo: blog-comments
+  owner: pzm9012
+  admin: ['pzm9012']
   language: zh-CN
   labels: ['Gitalk']
   perPage: 10
@@ -947,7 +948,7 @@ about:
   banner_img: /img/cover9.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
-  avatar: /img/avatar1.png
+  avatar: /img/avatar.png
   name: "pzm9012 | 洺渊"
   intro: ""
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
@@ -1002,30 +1003,30 @@ links:
       title: "Fluid Repo",
       intro: "主题 GitHub 仓库",
       link: "https://github.com/fluid-dev/hexo-theme-fluid",
-      avatar: "/img/favicon.png"
-    }
-    - {
-      title: "PossibleVing",
-      intro: "博客",
-      link: "https://www.possibleving.top/",
-      avatar: "/img/favicon.png"
+      avatar: "https://avatars2.githubusercontent.com/t/3419353?s=280"
     }
     - {
       title: "shenmo的世界",
       intro: "博客",
       link: "https://blog.shenmo.tech/",
-      avatar: "/img/favicon.png"
+      avatar: "https://blog.shenmo.tech/img/avatar.jpeg"
     }
     - {
       title: "hanzn-zzx的小站",
       intro: "博客",
       link: "https://hanzn-zzx.gitlab.io/",
-      avatar: "/img/favicon.png"
+      avatar: "https://avatar.cdn.deepin.com/public/avatar/2024/01/01/14-51-41-d8c7bec4.png"
+    }
+    - {
+      title: "F_Qilin的小窝",
+      intro: "博客",
+      link: "https://blog.fqilin.top/",
+      avatar: "https://blog.fqilin.top/img/avatar.jpg"
     }
 
   # 当成员头像加载失败时，替换为指定图片
   # When the member avatar fails to load, replace the specified image
-  onerror_avatar: /img/avatar.png
+  onerror_avatar: /img/avatar_default.png
 
   # 友链下方自定义区域，支持 HTML，可插入例如申请友链的文字
   # Custom content at the bottom of the links
